move tests to a separate package